--- a/mifern/mock-client-api/projects/sharepoint/build.properties
+++ b/mifern/mock-client-api/projects/sharepoint/build.properties
@@ -3,3 +3,6 @@
 CONNECTOR_MANAGER_DIR=
 CONN_VERSION=2.8.4_RC1
 BUILD_VERSION=2.8.4_Build1
+
+# Set the client factory to use for mock testing.
+#client.factory=com.google.enterprise.connector.sharepoint.wsclient.mock.MockClientFactory
