Separated LDAP username,password,domain from Sharepoint credentials

--- a/ondra/projects/sharepoint/config/SharepointConnectorResources.properties
+++ b/ondra/projects/sharepoint/config/SharepointConnectorResources.properties
@@ -19,6 +19,9 @@ groupnameFormatInAce=Groupname Format in ACE
 usernameFormatInAce=Username Format in ACE
 # LDAP directory server configuration
 ldapServerHostAddress=LDAP Server Host
+ldapUserName=LDAP Username
+ldapPassword=LDAP Password
+ldapDomain=LDAP Domain
 portNumber=Port Number
 authenticationType=Authentication Type
 connectMethod=Connection Method
