Fixing tests that were broken by ListsWS clean up. This involved using client factory and lists helper where appropriate.
Code review: http://codereview.appspot.com/5798043/

--- a/mifern/mock-client-api/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/mifern/mock-client-api/projects/sharepoint/source/javatests/TestConfig.properties
@@ -105,8 +105,8 @@ searchUserName2=
 searchUserName3=
 
 
-refreshInterval=
-cacheSize=
+refreshInterval=10
+cacheSize=10
 
 #ldapuser1=searchuser1
 ldapuser1=
