--- a/tvartak/fix-issue-6325978/projects/sharepoint/build.properties
+++ b/tvartak/fix-issue-6325978/projects/sharepoint/build.properties
@@ -1,5 +1,5 @@
 # Set the value of this property to point to the directory where the Connector Manager SPI jars can be found
 # eg: CONNECTOR_MANAGER_DIR=../../../CM/trunk/connector-manager
-CONNECTOR_MANAGER_DIR=
-CONN_VERSION=2.9.0-X4
-BUILD_VERSION=2.9.0-X4
+CONNECTOR_MANAGER_DIR=/Users/jlacey/source/google/cm-28x/projects/connector-manager
+CONN_VERSION=2.8.0
+BUILD_VERSION=2.9.0-X5
