Fix bug 6513826: Add less verbose logging level for MBean messages. Raised the level of the javax.management package to SEVERE, matching the other core packages (such as javax.net and org.springframework).
Also, the SharePoint connector's logging.properties was one iteration
older than the other connectors' and is being updated, along with the
AD groups logging.propertes, which copied the SharePoint version. The
changes were (and are) swapping the package and handler configuration
sections, adding more explanatory comments, and removing a non-
existent java.util.logging.FileHandler.layout.ConversionPattern
property (log4j has such a property).

Code review: http://codereview.appspot.com/6490114/

--- a/projects/sharepoint/config/config/logging.properties
+++ b/projects/sharepoint/config/config/logging.properties
@@ -20,9 +20,46 @@
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
 
-
-#.level=ALL
 .level=INFO
+
+############################################################
+#    Package Specific patterns.
+############################################################
+
+## To generate more detailed logging in general, edit the global
+## .level property above. To generate more specific logging, uncomment
+## and edit one of the following lines.
+
+## Use the following line to configure logging for the Connector Manager
+## and the SharePoint connector together.
+#com.google.enterprise.connector.level = ALL
+
+## Use the following line to configure logging for the SharePoint
+## connector separately.
+#com.google.enterprise.connector.sharepoint.level = ALL
+
+#####  HTTPCLIENT LOGS #####
+#org.apache.commons.httpclient.HttpMethodBase.level=SEVERE
+httpclient.wire.level=SEVERE 
+org.apache.commons.httpclient.level=SEVERE 
+#org.springframework.beans.factory.xml.XmlBeanDefinitionReader
+
+##### CATALINA LOGS #####
+org.apache.catalina.level=SEVERE
+#org.apache.catalina.loader.WebappClassLoader.level=SEVERE
+#org.apache.catalina.startup.ClassLoaderFactory.level=SEVERE
+#org.apache.catalina.startup.Bootstrap.level=SEVERE
+
+org.apache.level=INFO
+
+#####  TOMCAT LOGS #####
+org.apache.tomcat.util.level=SEVERE
+util.digester.Digester.level=SEVERE 
+org.springframework.level=SEVERE
+JMX.mbean.level=SEVERE
+org.apache.axis.level=SEVERE
+javax.net.level=SEVERE
+javax.management.level=SEVERE
 
 ############################################################
 # "handlers" specifies a comma separated list of log Handler 
@@ -30,6 +67,8 @@
 # Note that these classes must be on the system classpath.
 
 handlers= java.util.logging.FileHandler
+# ConsoleHandler is disabled
+#, java.util.logging.ConsoleHandler
 ############################################################
 
 ############################################################
@@ -44,16 +83,15 @@ handlers= java.util.logging.FileHandler
 # "%u" a unique number to resolve conflicts 
 # "%%" translates to a single percent sign "%
 #-----------------------------------------------------------------------------------------------------------
-#Refer: http://java.sun.com/j2se/1.4.2/docs/api/java/util/logging/FileHandler.html
+#Refer: http://java.sun.com/j2se/1.5.0/docs/api/java/util/logging/FileHandler.html
 #-----------------------------------------------------------------------------------------------------------
 
 ###############PROPERTIES FOR FILE HANDLER###################
 ###java.util.logging.FileHandler.level specifies the default level for the Handler (defaults to Level.ALL).
-#java.util.logging.FileHandler.level=INFO
 java.util.logging.FileHandler.level=ALL
 
 ###java.util.logging.FileHandler.pattern specifies a pattern for generating the output file name. 
-###See below for details. (Defaults to "%h/java%u.log").
+###See LOGGING PATTERNS above for details. (Defaults to "%h/java%u.log").
 java.util.logging.FileHandler.pattern = ${catalina.base}/logs/google-connectors.%g.log
 
 ###java.util.logging.FileHandler.limit specifies an approximate maximum amount to write (in bytes) to any one file. 
@@ -68,41 +106,13 @@ java.util.logging.FileHandler.count = 10
 java.util.logging.FileHandler.encoding=UTF-8
 
 ###java.util.logging.FileHandler.formatter specifies the name of a Formatter class to use (defaults to java.util.logging.XMLFormatter) 
+# Note that these classes must be on the system classpath.
 java.util.logging.FileHandler.formatter = com.google.enterprise.connector.logging.SimpleFormatter
 
-java.util.logging.FileHandler.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %5p [%t] (%F:%L) - %m%n
 ############################################################
 
-
-############################################################
-#    Package Specific patterns.
-############################################################
-
-##### CONNECTOR MANAGER SPECIFIC LOGS #####
-#com.google.enterprise.connector.level = ALL
-
-##### CONNECTOR SPECIFIC LOGS #####
-#com.google.enterprise.connector.sharepoint.level = ALL
-
-##### CATALINA LOGS #####
-org.apache.catalina.level=SEVERE
-#org.apache.catalina.loader.WebappClassLoader.level=SEVERE
-#org.apache.catalina.startup.ClassLoaderFactory.level=SEVERE
-#org.apache.catalina.startup.Bootstrap.level=SEVERE
-
-org.apache.level=INFO
-
-#####  HTTPCLIENT LOGS #####
-#org.apache.commons.httpclient.HttpMethodBase.level=SEVERE
-httpclient.wire.level=SEVERE 
-org.apache.commons.httpclient.level=SEVERE 
-#org.springframework.beans.factory.xml.XmlBeanDefinitionReader
-
-#####  TOMCAT LOGS #####
-org.apache.tomcat.util.level=SEVERE
-util.digester.Digester.level=SEVERE 
-org.springframework.level=SEVERE
-JMX.mbean.level=SEVERE
-org.apache.axis.level=SEVERE
-javax.net.level=SEVERE
-
+###############PROPERTIES FOR CONSOLE HANDLER###################
+# Limit the message that are printed on the console to INFO and above.
+#java.util.logging.ConsoleHandler.level = INFO
+#java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+##################################################################
