Changes to run SharepointSocialTraversalManagerTest without SharePoint. The test class already uses mocks, but needs additional properties. Also, connector-adgroups.jar and h2.jar were required at runtime, but not in the JUnit classpath.
Code review: http://codereview.appspot.com/6493117/

--- a/projects/sharepoint/build.xml
+++ b/projects/sharepoint/build.xml
@@ -253,7 +253,9 @@
         <pathelement location="${spi.jar.dir}/connector-spi.jar" />
         <pathelement location="${tests.jarfile}" />
         <pathelement location="${jarfile}" />
+        <pathelement location="${adgroups.jar}" />
         <pathelement location="${cm-third-paty.jar}/guava-r05.jar" />
+        <pathelement location="${cm-third-paty.jar}/h2.jar" />
         <pathelement location="${cm-third-paty_jcr.jar}/jcr-1.0.jar" />
         <pathelement location="${sql.properties}/*.properties" />
         <pathelement location="${config}" />
