--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -20,7 +20,7 @@ domain2=
 username2=
 password2=
 ldapServerHostAddress2=
-sharepointUrl2=
+sharepointUrl2=http://example.com/dummy
 
 # For AuthN and AuthZ manager
 SearchUserID=
@@ -95,6 +95,7 @@ DriverClass=
 DBURL=
 DBUsername=
 DBPassword=
+DBVendor=h2
 
 ################
 
@@ -156,6 +157,7 @@ searchUser2=
 ldapGroup1=
 
 # gsa configuration values
+GsaHost=127.0.0.1
 GsaPort=8000
 GsaAdminUsername=dummy
 GsaAdminPassword=dummy
