--- a/sharepoint/build.xml
+++ b/sharepoint/build.xml
@@ -308,6 +308,16 @@
     </zip>
     <!--<checksum file="${downloads.dir}/connector-sharepoint-${version}.zip" />-->
 
+    <!-- Preserve the existing file name and directory layout. -->
+    <property name="gss.prefix"
+              value="Google_Services_for_SharePoint_${version}" />
+    <zip destfile="${downloads.dir}/${gss.prefix}.zip">
+      <zipfileset dir="" prefix="${gss.prefix}">
+        <include name="source_net/**" />
+      </zipfileset>
+    </zip>
+    <checksum algorithm="SHA-1"
+              file="${downloads.dir}/${gss.prefix}.zip" />
   </target>
 
   <target name="clean" depends="clean_code_coverage" description="Deletes files produced by compile and test.">
