--- a/projects/sharepoint/config/SharepointConnectorResources.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Crawl URL
 domain=Domain
 username=Username
-Password=Password
+password=Password
 mySiteBaseURL=MySite URL (Applicable for MOSS 2007 and higher)
 includedURls=Include URLs Matching the Following Patterns
 excludedURls=Do Not Include URLs Matching the Following Patterns
