Tagged the 3.0.0 release from /tags/builds/3.0.x/3.0.0-RC15. This revision only includes the connector and GSS. Search Box and the GSARKS installer will be merged from the 3.0.x release branch in the next revision.

--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -3,13 +3,13 @@ googleConnectorWorkDir=
 googleWorkDir=
 googleGlobalnamespace=
 googleLocalNamespace=
-sharepointUrl=http://example.com/dummy
-aliasMap=
+sharepointUrl=
+AliasMap=
 domain=
-username=dummy
-password=dummy
+username=
+password=
 mySiteBaseURL=
-includedURls=http://example.com/dummy
+includedURls=
 excludedURls=
 kdcserver=
 authorization=Metadata-and-URL
@@ -20,7 +20,7 @@ domain2=
 username2=
 password2=
 ldapServerHostAddress2=
-sharepointUrl2=http://example.com/dummy
+sharepointUrl2=
 
 # For AuthN and AuthZ manager
 SearchUserID=
@@ -87,15 +87,12 @@ SearchDocID411 =
 SearchDocID412 =
 SearchDocID413 =
 
-ChangesSinceToken=0
-
 #################
 #For testing ACL User Data Store
 DriverClass=
 DBURL=
 DBUsername=
 DBPassword=
-DBVendor=h2
 
 ################
 
@@ -103,7 +100,7 @@ pushAcls=
 usernameFormatInAce=
 groupnameFormatInAce=
 ldapServerHostAddress=
-portNumber=389
+portNumber=
 authenticationType=
 connectMethod=
 searchBase=
@@ -133,8 +130,8 @@ searchUserName2=
 searchUserName3=
 
 
-refreshInterval=7200
-cacheSize=1000
+refreshInterval=
+cacheSize=
 
 #ldapuser1=searchuser1
 ldapuser1=
@@ -157,10 +154,8 @@ searchUser2=
 ldapGroup1=
 
 # gsa configuration values
-GsaHost=127.0.0.1
-GsaPort=8000
-GsaAdminUsername=dummy
-GsaAdminPassword=dummy
+GsaAdminUsername=
+GsaAdminPassword=
 
 #social option
 SocialOption=yes
@@ -170,3 +165,4 @@ UTF8SiteUrl=
 
 #publishing site URL
 PublishingSiteUrl=
+
