--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_oracle.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_oracle.properties
@@ -11,16 +11,20 @@ CREATE_MEMBERS=CREATE TABLE :members (groupid NUMBER, memberdn VARCHAR2(1024), m
 SELECT_SERVER=SELECT serverid, dn, netbiosname, dnsroot, dsservicename, invocationid, highestcommittedusn, lastfullsync FROM :servers WHERE dn = :dn
 UPDATE_SERVER=MERGE INTO servers USING dual ON (dn = :dn) WHEN MATCHED THEN UPDATE SET netbiosname = :netbiosname, dnsroot = :dnsroot, sid = :sid, dsservicename = :dsservicename, invocationid = :invocationid, highestcommittedusn = :highestcommittedusn, lastfullsync = :lastfullsync WHEN NOT MATCHED THEN INSERT (serverid, dn, netbiosname, dnsroot, sid, dsservicename, invocationid, highestcommittedusn, lastfullsync) VALUES (servers_sequence.nextval, :dn, :netbiosname, :dnsroot, :sid, :dsservicename, :invocationid, :highestcommittedusn, :lastfullsync)
 MERGE_ENTITIES=MERGE INTO :entities USING dual ON (objectguid = :objectguid) WHEN MATCHED THEN UPDATE SET dn = :dn, samaccountname = :samaccountname, userprincipalname = :userprincipalname, domainsid = :domainsid, rid = :rid, primarygroupid = :primarygroupid, usnchanged = :usnchanged, wellknown  = :wellknown WHEN NOT MATCHED THEN INSERT (entityid, dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, wellknown) VALUES (:entities:sequence.nextval, :dn, :samaccountname, :userprincipalname, :domainsid, :rid, :primarygroupid, :objectguid, :usnchanged, :wellknown)
+
+FIND_ENTITY=SELECT entityid FROM :entities WHERE dn = :dn
+FIND_PRIMARY_GROUP=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid = :primarygroupid
+FIND_GROUP=SELECT entityid FROM :entities WHERE dn = :memberdn
+FIND_FOREIGN=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid = :rid
+MERGE_MEMBERSHIP=MERGE INTO :members USING dual ON (groupid = :groupid AND memberdn = :memberdn) WHEN MATCHED THEN UPDATE SET memberid = :memberid WHEN NOT MATCHED THEN INSERT (groupid, memberdn, memberid) VALUES (:groupid, :memberdn, :memberid)
+
 DELETE_MEMBERSHIPS=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid) OR memberid in (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid)
 ADD_MEMBERSHIPS=INSERT INTO :members (groupid, memberdn) VALUES ((SELECT entityid FROM :entities WHERE dn = :dn), :memberdn)
-MATCH_ENTITIES=UPDATE :members SET memberid = (SELECT entityid FROM :entities WHERE memberdn = dn)
-RESOLVE_PRIMARY_GROUPS=MERGE INTO :members m USING (SELECT b.entityid AS groupid, a.dn AS memberdn, a.entityid AS memberid FROM :entities a JOIN :entities b ON a.domainsid = b.domainsid AND a.primarygroupid = b.rid) j ON (m.groupid = j.groupid AND m.memberdn = j.memberdn) WHEN MATCHED THEN UPDATE SET memberid = j.memberid WHEN NOT MATCHED THEN INSERT (groupid, memberdn, memberid) VALUES (j.groupid, j.memberdn, j.memberid)
-RESOLVE_FOREIGN_SECURITY_PRINCIPALS=MERGE INTO :members USING :entities ON (SUBSTR(memberdn, 4, INSTR(memberdn, ',CN') - 4) = domainsid || '-' || rid AND memberdn LIKE '%CN=ForeignSecurityPrincipals%') WHEN MATCHED THEN UPDATE SET memberid = entityid
 
 SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE LOWER(samaccountname) = LOWER(:samaccountname) AND primarygroupid IS NOT NULL
 SELECT_USER_BY_DOMAIN_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE LOWER(samaccountname) = LOWER(:samaccountname) and (UPPER(netbiosname) = UPPER(:netbiosname) or LOWER(dnsroot) = LOWER(:netbiosname)) AND primarygroupid IS NOT NULL
 SELECT_WELLKNOWN_MEMBERSHIPS=SELECT entityid, netbiosname, samaccountname FROM :entities LEFT JOIN :servers ON domainsid = sid WHERE wellknown = 1
 SELECT_MEMBERSHIPS_BY_ENTITYID=SELECT entityid, netbiosname, samaccountname FROM :members JOIN entities ON groupid = entityid JOIN :servers ON domainsid = sid WHERE memberid = :entityid
-SELECT_MEMBERSHIPS_BY_DN=SELECT e1.dn, memberdn FROM :entities e1 JOIN :members ON e1.entityid = groupid AND e1.dn = :dn LEFT JOIN :entities e2 ON memberid = e2.entityid WHERE e1.rid != e2.primarygroupid OR e2.primarygroupid IS NULL
+SELECT_MEMBERSHIPS_BY_DN=SELECT e1.dn, memberdn, memberid FROM :entities e1 JOIN :members ON e1.entityid = groupid AND e1.dn = :dn LEFT JOIN :entities e2 ON memberid = e2.entityid WHERE e1.rid != e2.primarygroupid OR e2.primarygroupid IS NULL
 DELETE_MEMBERSHIPS_BY_DN_AND_MEMBERDN=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn) AND memberdn = :memberdn
 SELECT_ALL_ENTITIES_BY_SID=SELECT dn FROM :entities WHERE domainsid = :sid
