Add indexes to speed up authn queries
b/7891660
https://codereview.appspot.com/7205059/

--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_oracle.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_oracle.properties
@@ -3,7 +3,8 @@ CREATE_SERVERS_SEQUENCE=CREATE SEQUENCE :servers:sequence
 CREATE_SERVERS=CREATE TABLE :servers (serverid NUMBER, dn VARCHAR2(1024) NOT NULL, netbiosname VARCHAR2(32) NOT NULL, dnsroot VARCHAR2(64), sid VARCHAR2(64) NOT NULL, dsservicename VARCHAR2(512) NOT NULL, invocationid VARCHAR2(128) NOT NULL, highestcommittedusn NUMBER NOT NULL, lastfullsync TIMESTAMP, PRIMARY KEY(serverid), UNIQUE(dn), UNIQUE(sid, dnsroot))
 TEST_ENTITIES=SELECT 1 FROM :entities WHERE rownum < 0
 CREATE_ENTITIES_SEQUENCE=CREATE SEQUENCE :entities:sequence
-CREATE_ENTITIES=CREATE TABLE :entities (entityid NUMBER, dn VARCHAR2(1024), samaccountname VARCHAR2(256), userprincipalname VARCHAR2(256), domainsid VARCHAR2(64) NOT NULL, rid NUMBER(10), primarygroupid NUMBER(10), objectguid VARCHAR2(64), usnchanged NUMBER, wellknown NUMBER NOT NULL, PRIMARY KEY(entityid), UNIQUE(dn), UNIQUE(domainsid, primarygroupid, rid, entityid, dn))
+# TODO: separate into indexes
+CREATE_ENTITIES=CREATE TABLE :entities (entityid NUMBER, dn VARCHAR2(1024), samaccountname VARCHAR2(256), userprincipalname VARCHAR2(256), domainsid VARCHAR2(64) NOT NULL, rid NUMBER(10), primarygroupid NUMBER(10), objectguid VARCHAR2(64), usnchanged NUMBER, wellknown NUMBER NOT NULL, PRIMARY KEY(entityid), UNIQUE(dn), UNIQUE(domainsid, primarygroupid, rid, entityid, dn), UNIQUE(rid, entityid), UNIQUE(wellknown, entityid), UNIQUE(samaccountname, entityid))
 TEST_MEMBERS=SELECT 1 FROM :members WHERE rownum < 0
 CREATE_MEMBERS_SEQUENCE=CREATE SEQUENCE :members:sequence
 CREATE_MEMBERS=CREATE TABLE :members (groupid NUMBER, memberdn VARCHAR2(1024), memberid NUMBER, PRIMARY KEY (groupid, memberdn), FOREIGN KEY(groupid) REFERENCES :entities (entityid), FOREIGN KEY(memberid) REFERENCES :entities (entityid))
@@ -20,8 +21,8 @@ FIND_FOREIGN=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid
 MERGE_MEMBERSHIP=MERGE INTO :members USING dual ON (groupid = :groupid AND memberdn = :memberdn) WHEN MATCHED THEN UPDATE SET memberid = :memberid WHEN NOT MATCHED THEN INSERT (groupid, memberdn, memberid) VALUES (:groupid, :memberdn, :memberid)
 DELETE_MEMBERSHIPS=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid) OR memberid in (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid)
 
-SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE LOWER(samaccountname) = LOWER(:samaccountname) AND primarygroupid IS NOT NULL
-SELECT_USER_BY_DOMAIN_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE LOWER(samaccountname) = LOWER(:samaccountname) and (UPPER(netbiosname) = UPPER(:netbiosname) or LOWER(dnsroot) = LOWER(:netbiosname)) AND primarygroupid IS NOT NULL
+SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname AND primarygroupid IS NOT NULL
+SELECT_USER_BY_DOMAIN_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname and (UPPER(netbiosname) = UPPER(:netbiosname) or LOWER(dnsroot) = LOWER(:netbiosname)) AND primarygroupid IS NOT NULL
 SELECT_ENTITY_BY_DN_AND_NOT_GUID=SELECT objectguid FROM :entities WHERE dn = :dn AND objectguid != :objectguid
 SELECT_WELLKNOWN_MEMBERSHIPS=SELECT entityid, netbiosname, samaccountname FROM :entities LEFT JOIN :servers ON domainsid = sid WHERE wellknown = 1
 SELECT_MEMBERSHIPS_BY_ENTITYID=SELECT entityid, netbiosname, samaccountname FROM :members JOIN entities ON groupid = entityid JOIN :servers ON domainsid = sid WHERE memberid = :entityid
