--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
@@ -3,7 +3,7 @@ CREATE_SERVERS_SEQUENCE=
 CREATE_SERVERS=CREATE TABLE :servers (serverid BIGINT IDENTITY, dn NVARCHAR(1024) NOT NULL, netbiosname VARCHAR(32) NOT NULL, dnsroot VARCHAR(64) NOT NULL, sid VARCHAR(64) NOT NULL, dsservicename VARCHAR(512) NOT NULL, invocationid VARCHAR(128) NOT NULL, highestcommittedusn INT NOT NULL, lastfullsync DATETIME, PRIMARY KEY (serverid), UNIQUE(dn), UNIQUE(sid, dnsroot));
 TEST_ENTITIES=SELECT TOP 0 1 FROM :entities;
 CREATE_ENTITIES_SEQUENCE=
-CREATE_ENTITIES=CREATE TABLE :entities (entityid BIGINT IDENTITY, dn NVARCHAR(1024), samaccountname NVARCHAR(256), userprincipalname NVARCHAR(256), domainsid VARCHAR(64) NOT NULL, rid INT, primarygroupid INT, objectguid VARCHAR(64), usnchanged BIGINT, wellknown INT NOT NULL, PRIMARY KEY(entityid), UNIQUE(dn), UNIQUE(domainsid, primarygroupid, rid, entityid, dn));
+CREATE_ENTITIES=CREATE TABLE :entities (entityid BIGINT IDENTITY, dn NVARCHAR(1024), samaccountname NVARCHAR(256), userprincipalname NVARCHAR(256), domainsid VARCHAR(64) NOT NULL, rid INT, primarygroupid INT, objectguid VARCHAR(64), usnchanged BIGINT, wellknown INT NOT NULL, PRIMARY KEY(entityid), UNIQUE(dn), UNIQUE(domainsid, primarygroupid, rid, entityid, dn), UNIQUE(objectguid)); CREATE INDEX rid:entities:index ON :entities(RID); CREATE INDEX wellknown:entities:index ON :entities(wellknown); CREATE INDEX samaccountname:entities:index on :entities(samaccountname);
 TEST_MEMBERS=SELECT TOP 0 1 FROM :members;
 CREATE_MEMBERS_SEQUENCE=
 CREATE_MEMBERS=CREATE TABLE :members (groupid BIGINT, memberdn NVARCHAR(1024), memberid BIGINT, PRIMARY KEY (groupid, memberdn), FOREIGN KEY(groupid) REFERENCES :entities (entityid), FOREIGN KEY(memberid) REFERENCES :entities (entityid));
@@ -22,8 +22,8 @@ MERGE_MEMBERSHIP=IF EXISTS (SELECT NULL FROM :members WHERE groupid = :groupid A
 DELETE_MEMBERSHIPS=DELETE FROM :members WHERE groupid IN (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid) OR memberid in (SELECT entityid FROM :entities WHERE dn = :dn OR objectguid = :objectguid);
 
 
-SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE LOWER(samaccountname) = LOWER(:samaccountname) AND primarygroupid IS NOT NULL;
-SELECT_USER_BY_DOMAIN_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE LOWER(samaccountname) = LOWER(:samaccountname) and (UPPER(netbiosname) = UPPER(:netbiosname) OR LOWER(dnsroot) = LOWER(:netbiosname)) AND primarygroupid IS NOT NULL;
+SELECT_USER_BY_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname AND primarygroupid IS NOT NULL;
+SELECT_USER_BY_DOMAIN_SAMACCOUNTNAME=SELECT entityid, entities.dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, dnsroot, netbiosname FROM :entities JOIN :servers ON domainsid = sid WHERE samaccountname = :samaccountname and (UPPER(netbiosname) = UPPER(:netbiosname) OR LOWER(dnsroot) = LOWER(:netbiosname)) AND primarygroupid IS NOT NULL;
 SELECT_ENTITY_BY_DN_AND_NOT_GUID=SELECT objectguid FROM :entities WHERE dn = :dn AND objectguid <> :objectguid;
 SELECT_WELLKNOWN_MEMBERSHIPS=SELECT entityid, netbiosname, samaccountname FROM :entities LEFT JOIN :servers ON domainsid = sid WHERE wellknown = 1;
 SELECT_MEMBERSHIPS_BY_ENTITYID=SELECT entityid, netbiosname, samaccountname FROM :members JOIN entities ON groupid = entityid JOIN :servers ON domainsid = sid WHERE memberid = :entityid;
