--- a/projects/sharepoint/build.xml
+++ b/projects/sharepoint/build.xml
@@ -304,7 +304,19 @@
     <fail if="${ant.project.name}.failure" message="Test failure"/>
   </target>
 
-  <target name="jar" depends="compile,svn.svn-branch-version"
+  <target name="init-package" depends="svn.svn-branch-version">
+    <property name="downloads.prefix"
+              value="connector-sharepoint-${svn.branch}" />
+    <property name="repackage.prefix" value="connector-sharepoint-${version}"/>
+
+    <!-- Preserve the existing file name from the documentation. -->
+    <property name="gss.prefix"
+              value="Google_Services_for_SharePoint_${svn.branch}" />
+    <property name="repackage.gss.prefix"
+              value="Google_Services_for_SharePoint_${version}" />
+  </target>
+
+  <target name="jar" depends="compile,init-package"
           description="sharepoint-connector">
     <copy todir="${config.tmp.dir}" overwrite="true">
       <fileset dir="${config}">
@@ -361,9 +373,6 @@
   </target>
 
   <target name="download-sharepoint-connector" depends="jar,javadoc">
-    <property name="downloads.prefix"
-              value="connector-sharepoint-${svn.branch}" />
-
     <zip destfile="${downloads.dir}/${downloads.prefix}-src.zip">
       <zipfileset dir="." prefix="${downloads.prefix}">
         <include name="javadoc/**" />
@@ -403,16 +412,25 @@
     <checksum algorithm="SHA-1"
               file="${downloads.dir}/${downloads.prefix}.zip" />
 
-    <!-- Preserve the existing file name and directory layout. -->
-    <property name="gss.prefix"
-              value="Google_Services_for_SharePoint_${svn.branch}" />
     <zip destfile="${downloads.dir}/${gss.prefix}.zip">
       <zipfileset dir="" prefix="${gss.prefix}">
+        <!-- Preserve the existing directory layout from the documentation. -->
         <include name="source_net/**" />
       </zipfileset>
     </zip>
     <checksum algorithm="SHA-1"
               file="${downloads.dir}/${gss.prefix}.zip" />
+  </target>
+
+  <target name="repackage" depends="init-package"
+          description="Repackage release candidate files for release.">
+    <repackage-downloads downloads.dir="${downloads.dir}"
+                         downloads.prefix="${downloads.prefix}"
+                         repackage.prefix="${repackage.prefix}" />
+    <repackage-zip destfile="${downloads.dir}/${repackage.gss.prefix}.zip"
+                   src="${downloads.dir}/${gss.prefix}.zip"
+                   downloads.prefix="${gss.prefix}"
+                   repackage.prefix="${repackage.gss.prefix}" />
   </target>
 
   <target name="clean" depends="clean_code_coverage" description="Deletes files produced by compile and test.">
