--- a/projects/adgroups/version.properties
+++ b/projects/adgroups/version.properties
@@ -3,8 +3,8 @@
 
 # The version of the AD Groups Connector
 version.major = 3
-version.minor = 0
-version.micro = 6
+version.minor = 1
+version.micro = x
 version = ${version.major}.${version.minor}.${version.micro}
 
 # The Specification version of the Connector Manager SPI
