Fix for b/8625891 - SharePoint bulk authorization doesn't support attachment URLs. For metadata-and-url feeds the connectors send a doc id for attachments that starts with "[ATTACHMENT]". When the GSA sends an AuthZ request for attachments it is send the URL in lower case so the connector is not able to parse the doc id since it's expecting it to start with "[ATTACHMENT]". I updated the code to use case insensitive matching.
NOTE: This same error will apply to alerts. I'll follow up a separate CL to fix alerts.

Code review: https://codereview.appspot.com/9069044/

--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -29,6 +29,9 @@ SearchDocID1=
 SearchDocID2=
 SearchDocID3=
 
+# SearchDocID5 must be an attachment.
+SearchDocID5=
+
 # For generating test data for crawling.
 # First Test Site
 Site1_URL=
