--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
@@ -6,7 +6,7 @@ CREATE_ENTITIES_SEQUENCE=
 CREATE_ENTITIES=CREATE TABLE IF NOT EXISTS :entities (entityid IDENTITY, dn VARCHAR(1024), samaccountname VARCHAR(256), userprincipalname VARCHAR(256), domainsid VARCHAR(64) NOT NULL, rid INTEGER, primarygroupid INTEGER, objectguid VARCHAR(64), usnchanged BIGINT, wellknown SMALLINT NOT NULL); CREATE INDEX IF NOT EXISTS dn:entities:index ON :entities(DN); CREATE INDEX IF NOT EXISTS rid:entities:index ON :entities(RID);CREATE INDEX IF NOT EXISTS objectguid:entities:index ON :entities(objectguid);CREATE INDEX IF NOT EXISTS wellknown:entities:index ON :entities(wellknown);CREATE INDEX IF NOT EXISTS samaccountname:entities:index on :entities(samaccountname);
 TEST_MEMBERS=SELECT 1 FROM :members LIMIT 1;
 CREATE_MEMBERS_SEQUENCE=
-CREATE_MEMBERS=CREATE TABLE IF NOT EXISTS :members (groupid LONG, memberdn VARCHAR(1024), memberid LONG, PRIMARY KEY (groupid, memberdn), FOREIGN KEY(groupid) REFERENCES :entities (entityid), FOREIGN KEY(memberid) REFERENCES :entities (entityid));
+CREATE_MEMBERS=CREATE TABLE IF NOT EXISTS :members (groupid LONG, memberdn VARCHAR(1024), memberid LONG, PRIMARY KEY (groupid, memberdn), FOREIGN KEY(groupid) REFERENCES :entities (entityid), FOREIGN KEY(memberid) REFERENCES :entities (entityid)); CREATE INDEX IF NOT EXISTS memberid:members:index ON :members(memberid);
 
 SELECT_SERVER=SELECT serverid, dn, netbiosname, dnsroot, dsservicename, invocationid, highestcommittedusn, lastfullsync FROM :servers WHERE dn = :dn;
 UPDATE_SERVER=MERGE INTO :servers (dn, netbiosname, dnsroot, sid, dsservicename, invocationid, highestcommittedusn, lastfullsync) KEY (dn) VALUES (:dn, :netbiosname, :dnsroot, :sid, :dsservicename, :invocationid, :highestcommittedusn, :lastfullsync);
