--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
@@ -6,7 +6,7 @@ CREATE_ENTITIES_SEQUENCE=
 CREATE_ENTITIES=CREATE TABLE :entities (entityid BIGINT IDENTITY, dn NVARCHAR(1024), samaccountname NVARCHAR(256), userprincipalname NVARCHAR(256), domainsid VARCHAR(64) NOT NULL, rid INT, primarygroupid INT, objectguid VARCHAR(64), usnchanged BIGINT, wellknown INT NOT NULL, PRIMARY KEY(entityid), UNIQUE(dn), UNIQUE(domainsid, primarygroupid, rid, entityid, dn), UNIQUE(objectguid)); CREATE INDEX rid:entities:index ON :entities(RID); CREATE INDEX wellknown:entities:index ON :entities(wellknown); CREATE INDEX samaccountname:entities:index on :entities(samaccountname);
 TEST_MEMBERS=SELECT TOP 0 1 FROM :members;
 CREATE_MEMBERS_SEQUENCE=
-CREATE_MEMBERS=CREATE TABLE :members (groupid BIGINT, memberdn NVARCHAR(1024), memberid BIGINT, PRIMARY KEY (groupid, memberdn), FOREIGN KEY(groupid) REFERENCES :entities (entityid), FOREIGN KEY(memberid) REFERENCES :entities (entityid));
+CREATE_MEMBERS=CREATE TABLE :members (groupid BIGINT, memberdn NVARCHAR(1024), memberid BIGINT, PRIMARY KEY (groupid, memberdn), FOREIGN KEY(groupid) REFERENCES :entities (entityid), FOREIGN KEY(memberid) REFERENCES :entities (entityid)); CREATE INDEX memberid:members:index ON :members(memberid);
 
 SELECT_SERVER=SELECT serverid, dn, netbiosname, dnsroot, dsservicename, invocationid, highestcommittedusn, lastfullsync FROM :servers WHERE dn = :dn;
 # TODO: Convert to proper merge statement
