--- a/projects/sharepoint/source/javatests/TestConfig.properties
+++ b/projects/sharepoint/source/javatests/TestConfig.properties
@@ -29,8 +29,10 @@ SearchDocID1=
 SearchDocID2=
 SearchDocID3=
 
-# SearchDocID5 must be an attachment.
+# SearchDocID5 must be an attachment for content feeds.
+# SearchDocID6 must be an attachment for metadata-and-url feeds.
 SearchDocID5=
+SearchDocID6=
 
 # For generating test data for crawling.
 # First Test Site
