--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql.properties
@@ -11,6 +11,7 @@ CREATE_MEMBERS=CREATE TABLE IF NOT EXISTS :members (groupid LONG, memberdn VARCH
 SELECT_SERVER=SELECT serverid, dn, netbiosname, dnsroot, dsservicename, invocationid, highestcommittedusn, lastfullsync FROM :servers WHERE dn = :dn;
 UPDATE_SERVER=MERGE INTO :servers (dn, netbiosname, dnsroot, sid, dsservicename, invocationid, highestcommittedusn, lastfullsync) KEY (dn) VALUES (:dn, :netbiosname, :dnsroot, :sid, :dsservicename, :invocationid, :highestcommittedusn, :lastfullsync);
 MERGE_ENTITIES=MERGE INTO :entities (dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, wellknown) KEY (objectguid) VALUES (:dn, :samaccountname, :userprincipalname, :domainsid, :rid, :primarygroupid, :objectguid, :usnchanged, :wellknown);
+ADD_ENTITIES=INSERT INTO :entities (dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, wellknown) VALUES (:dn, :samaccountname, :userprincipalname, :domainsid, :rid, :primarygroupid, :objectguid, :usnchanged, :wellknown);
 
 FIND_ENTITY=SELECT entityid FROM :entities WHERE dn = :dn;
 FIND_PRIMARY_GROUP=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid = :primarygroupid;
