--- a/tvartak/ad-sql-server-bulkprocessing/projects/adgroups/version.properties
+++ b/tvartak/ad-sql-server-bulkprocessing/projects/adgroups/version.properties
@@ -3,8 +3,8 @@
 
 # The version of the AD Groups Connector
 version.major = 3
-version.minor = 3
-version.micro = 0
+version.minor = 0
+version.micro = 9-X1
 version = ${version.major}.${version.minor}.${version.micro}
 
 # The Specification version of the Connector Manager SPI
