Second part of fix for 10086529 ForeignSecurityPrincipals not always merged during membermship merge. When working with SQL Server do not overwrite the merge work done previously for ForeignSecurityPrincipals while matching Members with Entities.
Code Review: https://codereview.appspot.com/12750043/

--- a/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
+++ b/projects/adgroups/source/java/com/google/enterprise/connector/adgroups/sql_sqlserver.properties
@@ -14,7 +14,7 @@ UPDATE_SERVER=IF EXISTS (SELECT NULL FROM :servers WHERE dn = :dn) UPDATE :serve
 
 MERGE_ENTITIES=UPDATE :entities SET dn = :dn, samaccountname = :samaccountname, userprincipalname = :userprincipalname, domainsid = :domainsid, rid = :rid, primarygroupid = :primarygroupid, usnchanged = :usnchanged, wellknown = :wellknown WHERE objectguid = :objectguid; IF @@ROWCOUNT = 0 BEGIN INSERT INTO :entities (dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, wellknown) VALUES (:dn, :samaccountname, :userprincipalname, :domainsid, :rid, :primarygroupid, :objectguid, :usnchanged, :wellknown) END; 
 ADD_ENTITIES=INSERT INTO :entities (dn, samaccountname, userprincipalname, domainsid, rid, primarygroupid, objectguid, usnchanged, wellknown) VALUES (:dn, :samaccountname, :userprincipalname, :domainsid, :rid, :primarygroupid, :objectguid, :usnchanged, :wellknown);
-MATCH_ENTITIES=UPDATE :members SET memberid = (SELECT TOP 1 entityid FROM :entities e WHERE memberdn = dn);
+MATCH_ENTITIES=UPDATE :members SET memberid = (SELECT TOP 1 entityid FROM :entities e WHERE memberdn = dn) WHERE NOT memberdn LIKE '%CN=ForeignSecurityPrincipals,%';
 
 FIND_ENTITY=SELECT entityid FROM :entities WHERE dn = :dn;
 FIND_PRIMARY_GROUP=SELECT entityid FROM :entities WHERE domainsid = :domainsid AND rid = :primarygroupid;
