--- a/projects_installers/Google Search Appliance Resource Kit for SharePoint_x64/GSBControlPanel/GSBControlPanel.csproj
+++ b/projects_installers/Google Search Appliance Resource Kit for SharePoint_x64/GSBControlPanel/GSBControlPanel.csproj
@@ -95,6 +95,7 @@
       <SubType>Designer</SubType>
       <DependentUpon>GSAParameters.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
