Fix issue 8595321: Connector always does full crawl when traversing the AD server.
The problem is that startTraversal always returns null, so the CM
never has a checkpoint value, and it always calls startTraversal. The
fix is to return an empty document list with a non-null checkpoint
from startTraversal.

I added AdGroupsTraversalManagerTest for the test case, rather than
adding to the pile of possibly-related tests in AdGroupsConnectorTest.

Other changes:

* The tests were missing spring.jar and its friends from the classpath.

* AdGroupsConnectorTest.java had the wrong logger name.

Code review: https://codereview.appspot.com/44880043/

--- a/projects/adgroups/build.xml
+++ b/projects/adgroups/build.xml
@@ -157,7 +157,9 @@
         <pathelement location="${spi.jar.dir}/connector-spi.jar" />
         <pathelement location="${tests.jarfile}" />
         <pathelement location="${jarfile}" />
-        <pathelement location="${cm-third-paty.jar}/guava-r05.jar" />
+        <fileset dir="${cm-third-paty.jar}">
+          <include name="*.jar" />
+        </fileset>
         <pathelement location="${cm-third-paty_jcr.jar}/jcr-1.0.jar" />
         <pathelement location="${junit.jarfile}" />
         <pathelement location="${sql.properties}/*.properties" />
